plugins {
	id "edu.sc.seis.macAppBundle" version "2.1.6"
}

apply plugin: 'groovy'
apply plugin: 'eclipse'
apply plugin: 'application'

sourceCompatibility="1.8"
targetCompatibility="1.8"

repositories {
	mavenCentral()
	mavenLocal()
	maven {
		name "sonatype snapshots"
		url "https://oss.sonatype.org/content/repositories/snapshots"
	}
	maven {
		name "sonatype snapshots"
		url "https://oss.sonatype.org/content/repositories/releases"
	}
}

mainClassName = "de.prob2.ui.ProB2"

macAppBundle {
	dmgName = "ProB-2.0-for-MacOS"
	icon = "prob2.icns"
	bundleJRE = true
}

macAppBundle.mainClassName = mainClassName

if (hasProperty("macAppJRE")) {
	// Used to set a custom JRE to bundle at the command line: -PmacAppJRE=/path/to/the/jre
	macAppBundle.jreHome = macAppJRE
}

sourceSets.main.java.srcDirs = []
sourceSets.main.groovy.srcDirs += ["src/main/java"]


dependencies {
	compile 'com.google.code.gson:gson:1.7.1'
	compile 'de.codecentric.centerdevice:centerdevice-nsmenufx:2.1.4'
	compile 'de.hhu.stups:de.prob2.kernel:2.0.2'
	compile 'de.jensd:fontawesomefx:8.9'
	compile 'org.codehaus.groovy:groovy-all:2.4.7'
}
